tests/snapshots/examples_fixtures/type_system__failing__87_hm_pattern_binding_constrained_mismatch.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/87_hm_pattern_binding_constrained_mismatch.flx
== compile ==
failed (compile)
== diagnostics ==
error[E300]: Return Type Mismatch

The body of `main` does not match its declared return type.

  examples/type_system/failing/87_hm_pattern_binding_constrained_mismatch.flx:6:5
  |
1 | fn main() -> Unit {
  |              ---- `main` was declared to return `Unit`
2 |     let x: String = match Some(1) {
3 |         Some(v) -> v,
4 |         None -> 0,
5 |     }
6 |     x
  |     ^
  |     - this expression has type `String`

Note:
  declared return type: Unit
  body type: String

Help:
  Return a `Unit` value from `main` or change its annotation.
== stdout ==
<not executed>
